prevent layout shift

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 :root {
-    --color-primary-light: #88a7ff;
-    --color-primary: #4878ff;
+    --color-primary-light: hsl(224, 90%, 77%);
+    --color-primary: hsl(224, 90%, 64%);
     --color-primary-dark: #112e80;
     --color-focus: #e56700;
     --color-focus-light: #ffc188;
@@ -15,13 +15,13 @@
     --shadow: 0px 2px 6px -1px var(--color-gray);
     --elevated: 0px 3px 7px -2px var(--color-gray);
 
-    --shortcut-list-width: 300px;
+    --shortcut-list-width: 288px;
     --shortcut-list-handle-width: 20px;
     --shortcut-width: 320px;
 }
 
 html {
-    font-family: sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: var(--color-light);
     color: var(--color-dark);
     font-weight: 500;
@@ -161,7 +161,7 @@ aside {
     padding-left: 12px;
     flex-wrap: nowrap;
     width: var(--shortcut-list-width);
-    max-width: var(--shortcut-list-width);
+    min-width: var(--shortcut-list-width);
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -250,6 +250,7 @@ output#notification {
     display: none;
     box-shadow: var(--shadow);
     cursor: pointer;
+    background-color: var(--color-light);
 }
 
 output.error#notification {
